# sphrs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  aliases.js  crates.js  deny.toml  help.html  index.html  push_docs  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  coverage.yml  docs.yml  spellcheck.yml
benches/: bench.rs
examples/: fit.rs
implementors/sphrs/: trait.SphrsFloat.js
sphrs/: all.html  enum.ComplexSH.html  enum.ComplexSHType.html  enum.RealSH.html  enum.RealSHType.html  fn.SH.html  fn.irregular_solid_SH.html  fn.irregular_solid_sh.html  fn.real_SH.html  fn.real_SH_hardcoded.html  fn.real_irregular_solid_SH.html  fn.real_irregular_solid_sh.html  fn.real_regular_solid_SH.html  fn.real_regular_solid_sh.html  fn.real_sh.html  fn.real_sh_hardcoded.html  fn.regular_solid_SH.html  fn.regular_solid_sh.html  fn.sh.html  fn.sh00.html  fn.sh10.html  fn.sh1n1.html  fn.sh1p1.html  fn.sh20.html  fn.sh2n1.html  fn.sh2n2.html  fn.sh2p1.html  fn.sh2p2.html  fn.sh30.html  fn.sh3n1.html  fn.sh3n2.html  fn.sh3n3.html  fn.sh3p1.html  fn.sh3p2.html  fn.sh3p3.html  fn.sph_mat.html  index.html  sidebar-items.js  struct.ComplexHarmonics.html  struct.Coordinates.html  (+6 more)
sphrs/coordinates/: trait.SHCoordinates.html
sphrs/coords/: index.html  sidebar-items.js  struct.Coordinates.html  struct.CoordinatesFinal.html  trait.SHCoordinates.html
sphrs/float/: trait.SphrsFloat.html
sphrs/sh/: fn.K.html  fn.SH.html  fn.irregular_solid_SH.html  fn.irregular_solid_sh.html  fn.real_SH.html  fn.real_SH_hardcoded.html  fn.real_SH_hc.html  fn.real_irregular_solid_SH.html  fn.real_irregular_solid_sh.html  fn.real_regular_solid_SH.html  fn.real_regular_solid_sh.html  fn.real_sh.html  fn.real_sh_hardcoded.html  fn.regular_solid_SH.html  fn.regular_solid_sh.html  fn.sh.html  fn.sh00.html  fn.sh10.html  fn.sh1n1.html  fn.sh1p1.html  fn.sh20.html  fn.sh2n1.html  fn.sh2n2.html  fn.sh2p1.html  fn.sh2p2.html  fn.sh30.html  fn.sh3n1.html  fn.sh3n2.html  (+8 more)
src/: coordinates.rs  coords.rs  float.rs  lib.rs  sh.rs
test_helpers/: pylintrc  scipy.csv  scipy_comparison.py
(+30 files in other folders)
