[package]
name = "sphrs"
version = "0.1.2"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Spherical harmonics and solid harmonics"
documentation = "https://docs.rs/sphrs/latest/sphrs/"
homepage = "http://argmin-rs.org"
repository = "https://github.com/argmin-rs/sphrs"
readme = "README.md"
keywords = ["math", "science"]
categories = ["science"]
exclude = [
	".travis.yml",
	"push_docs",
]

[dependencies]
num = "0.2.0"
num-complex = "0.2.3"
num-traits = "0.2.10"

[dev-dependencies]
csv = "1"

[badges]
travis-ci = { repository = "argmin-rs/sphrs", branch = "master" }
maintenance = { status = "actively-developed" }
