[package]
name = "sphrs"
version = "0.1.3"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Spherical harmonics and solid harmonics"
documentation = "https://docs.rs/sphrs/latest/sphrs/"
homepage = "http://argmin-rs.org"
repository = "https://github.com/argmin-rs/sphrs"
readme = "README.md"
keywords = ["math", "science"]
categories = ["science", "rendering", "graphics"]

[dependencies]
num = "0.4"
num-complex = "0.4"
num-traits = "0.2"

[dev-dependencies]
approx = { version = "0.5", features = ["num-complex"] }
csv = "1"
quickcheck = "1"
quickcheck_macros = "1"

[badges]
maintenance = { status = "actively-developed" }
